--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Virtual KeyBoard</title>
     <script src="./virtual_keyboard.js"></script>
     <link rel="stylesheet" type="text/css" href="virtual_keyboard.css" />
-     <link rel="icon" href="https://github.com/ayeletshapiro/Keyboard/blob/main/keyboard.png" type="image/x-icon">
+    <link rel="icon" href="./computer.png" type="image/x-icon"> 
 </head>
 <body id="body" onload="loadHebrewKeyBoard()">
     
